[gd_scene load_steps=78 format=3 uid="uid://c8vuaixk6cdvw"]

[ext_resource type="Script" path="res://skeleton.gd" id="1_e453c"]
[ext_resource type="Texture2D" uid="uid://boo7axqxkde7w" path="res://assets/Skeleton/Skeleton Idle.png" id="1_pqrq6"]
[ext_resource type="Texture2D" uid="uid://bxfvr4r0eqy8u" path="res://assets/Skeleton/Skeleton Walk.png" id="2_4xkoi"]
[ext_resource type="Texture2D" uid="uid://byuhkj8l7lqkm" path="res://assets/Skeleton/Skeleton Attack.png" id="2_ji57s"]
[ext_resource type="Texture2D" uid="uid://bbobkpscyy7lm" path="res://assets/Skeleton/Skeleton Hit.png" id="3_ubid6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uljyt"]
atlas = ExtResource("2_ji57s")
region = Rect2(0, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrgmb"]
atlas = ExtResource("2_ji57s")
region = Rect2(43, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_md0yk"]
atlas = ExtResource("2_ji57s")
region = Rect2(86, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3cmk"]
atlas = ExtResource("2_ji57s")
region = Rect2(129, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk36h"]
atlas = ExtResource("2_ji57s")
region = Rect2(172, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w3v8"]
atlas = ExtResource("2_ji57s")
region = Rect2(215, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl3ll"]
atlas = ExtResource("2_ji57s")
region = Rect2(258, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_20v7a"]
atlas = ExtResource("2_ji57s")
region = Rect2(301, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvpii"]
atlas = ExtResource("2_ji57s")
region = Rect2(344, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrikg"]
atlas = ExtResource("2_ji57s")
region = Rect2(387, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbyrv"]
atlas = ExtResource("2_ji57s")
region = Rect2(430, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_krn65"]
atlas = ExtResource("2_ji57s")
region = Rect2(473, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_21aca"]
atlas = ExtResource("2_ji57s")
region = Rect2(516, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2gfx"]
atlas = ExtResource("2_ji57s")
region = Rect2(559, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg5ok"]
atlas = ExtResource("2_ji57s")
region = Rect2(602, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fedg"]
atlas = ExtResource("2_ji57s")
region = Rect2(645, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfn7l"]
atlas = ExtResource("2_ji57s")
region = Rect2(688, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdexo"]
atlas = ExtResource("2_ji57s")
region = Rect2(731, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub8rf"]
atlas = ExtResource("3_ubid6")
region = Rect2(0, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx2ip"]
atlas = ExtResource("3_ubid6")
region = Rect2(30, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwd4p"]
atlas = ExtResource("3_ubid6")
region = Rect2(60, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g328m"]
atlas = ExtResource("3_ubid6")
region = Rect2(90, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl13g"]
atlas = ExtResource("3_ubid6")
region = Rect2(120, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5bqy"]
atlas = ExtResource("3_ubid6")
region = Rect2(150, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yco5a"]
atlas = ExtResource("3_ubid6")
region = Rect2(180, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wute6"]
atlas = ExtResource("3_ubid6")
region = Rect2(210, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v83u0"]
atlas = ExtResource("1_pqrq6")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yljeb"]
atlas = ExtResource("1_pqrq6")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7wf0"]
atlas = ExtResource("1_pqrq6")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7xp7"]
atlas = ExtResource("1_pqrq6")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl83x"]
atlas = ExtResource("1_pqrq6")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_75mjx"]
atlas = ExtResource("1_pqrq6")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gy3a"]
atlas = ExtResource("1_pqrq6")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctnqw"]
atlas = ExtResource("1_pqrq6")
region = Rect2(168, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4bnh"]
atlas = ExtResource("1_pqrq6")
region = Rect2(192, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1cbx"]
atlas = ExtResource("1_pqrq6")
region = Rect2(216, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvck2"]
atlas = ExtResource("1_pqrq6")
region = Rect2(240, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg5en"]
atlas = ExtResource("2_4xkoi")
region = Rect2(0, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7y20"]
atlas = ExtResource("2_4xkoi")
region = Rect2(22, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1wuo"]
atlas = ExtResource("2_4xkoi")
region = Rect2(44, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd748"]
atlas = ExtResource("2_4xkoi")
region = Rect2(66, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nbc4"]
atlas = ExtResource("2_4xkoi")
region = Rect2(88, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v4pj"]
atlas = ExtResource("2_4xkoi")
region = Rect2(110, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tnm6"]
atlas = ExtResource("2_4xkoi")
region = Rect2(132, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_duwwt"]
atlas = ExtResource("2_4xkoi")
region = Rect2(154, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxapr"]
atlas = ExtResource("2_4xkoi")
region = Rect2(176, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_dit4b"]
atlas = ExtResource("2_4xkoi")
region = Rect2(198, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh8ui"]
atlas = ExtResource("2_4xkoi")
region = Rect2(220, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_u53v0"]
atlas = ExtResource("2_4xkoi")
region = Rect2(242, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqffc"]
atlas = ExtResource("2_4xkoi")
region = Rect2(264, 0, 22, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_1iuix"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uljyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrgmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md0yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3cmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk36h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w3v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl3ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20v7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvpii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrikg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbyrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krn65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21aca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2gfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg5ok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fedg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfn7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdexo")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub8rf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx2ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwd4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g328m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl13g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5bqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yco5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wute6")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v83u0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yljeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7wf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7xp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl83x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75mjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gy3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctnqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4bnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1cbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvck2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg5en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7y20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1wuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd748")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nbc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v4pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tnm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duwwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxapr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dit4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh8ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u53v0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqffc")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wto7r"]
radius = 7.0
height = 26.0

[sub_resource type="AtlasTexture" id="AtlasTexture_s0j5h"]
atlas = ExtResource("2_ji57s")
region = Rect2(0, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf4lr"]
atlas = ExtResource("2_ji57s")
region = Rect2(43, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hagy"]
atlas = ExtResource("2_ji57s")
region = Rect2(86, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2e3w"]
atlas = ExtResource("2_ji57s")
region = Rect2(129, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_haqy1"]
atlas = ExtResource("2_ji57s")
region = Rect2(172, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju4il"]
atlas = ExtResource("2_ji57s")
region = Rect2(215, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4tqn"]
atlas = ExtResource("2_ji57s")
region = Rect2(258, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0dq3"]
atlas = ExtResource("2_ji57s")
region = Rect2(301, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgqjq"]
atlas = ExtResource("2_ji57s")
region = Rect2(344, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_xltdl"]
atlas = ExtResource("2_ji57s")
region = Rect2(387, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sjh7"]
atlas = ExtResource("2_ji57s")
region = Rect2(430, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph6yj"]
atlas = ExtResource("2_ji57s")
region = Rect2(473, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwg42"]
atlas = ExtResource("2_ji57s")
region = Rect2(516, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu7dq"]
atlas = ExtResource("2_ji57s")
region = Rect2(559, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_kevi0"]
atlas = ExtResource("2_ji57s")
region = Rect2(602, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_giejj"]
atlas = ExtResource("2_ji57s")
region = Rect2(645, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q4lm"]
atlas = ExtResource("2_ji57s")
region = Rect2(688, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dhse"]
atlas = ExtResource("2_ji57s")
region = Rect2(731, 0, 43, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_aegqb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0j5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf4lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hagy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2e3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haqy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju4il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4tqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0dq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgqjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xltdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sjh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph6yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwg42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu7dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kevi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giejj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q4lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dhse")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ytb30"]
size = Vector2(20, 26)

[node name="Skeleton" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(10, 13)
script = ExtResource("1_e453c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1iuix")
animation = &"idle"
autoplay = "walk"
offset = Vector2(3, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wto7r")

[node name="Final_Location" type="Marker2D" parent="."]
position = Vector2(76, 0)

[node name="InvulnerableTimer" type="Timer" parent="."]
wait_time = 1.4

[node name="Attack_Animation" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_aegqb")
animation = &"attack"
offset = Vector2(10, -6)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(17, 0)
shape = SubResource("RectangleShape2D_ytb30")

[connection signal="timeout" from="InvulnerableTimer" to="." method="_on_invulnerable_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
